<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/label_name_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_24"
        android:layout_marginTop="48dp"
        android:text="@string/programmer_calculator"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/header_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/you_can_easily_convert_between_ndifferent_number_systems"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/label_name_app"
        app:layout_constraintTop_toBottomOf="@+id/label_name_app" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:background="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_octal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/input_background"
        android:digits="01234567"
        android:gravity="center_vertical"
        android:hint="@string/enter_octal_number"
        android:inputType="number"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/space_16"
        android:textColorHint="@color/green_50"
        android:ellipsize="end"
        android:textSize="@dimen/body_size"
        app:layout_constraintEnd_toEndOf="@+id/input_decimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/input_decimal"
        app:layout_constraintTop_toBottomOf="@+id/input_decimal" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_hex"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/input_background"
        android:gravity="center_vertical"
        android:hint="@string/enter_hexadecimal_number"
        android:inputType="text"
        android:digits="0123456789ABCDEFabcdef"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/body_size"
        android:paddingHorizontal="@dimen/space_16"
        android:textColorHint="@color/green_50"
        app:layout_constraintEnd_toEndOf="@+id/input_binary"
        app:layout_constraintStart_toStartOf="@+id/input_binary"
        app:layout_constraintTop_toBottomOf="@+id/input_binary" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_binary"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/input_background"
        android:digits="01"
        android:gravity="center_vertical"
        android:hint="@string/enter_binary_number"
        android:inputType="number"
        android:maxLines="1"
        android:ellipsize="end"
        android:textSize="@dimen/body_size"
        android:paddingHorizontal="@dimen/space_16"
        android:textColorHint="@color/green_50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />


    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_decimal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/input_background"
        android:digits="0123456789"
        android:gravity="center_vertical"
        android:hint="@string/enter_decimal_number"
        android:inputType="numberDecimal"
        android:maxLines="1"
        android:paddingHorizontal="@dimen/space_16"
        android:textColorHint="@color/green_50"
        android:ellipsize="end"
        android:textSize="@dimen/body_size"
        app:layout_constraintEnd_toEndOf="@+id/input_binary"
        app:layout_constraintStart_toStartOf="@+id/input_binary"
        app:layout_constraintTop_toBottomOf="@+id/input_hex" />


</androidx.constraintlayout.widget.ConstraintLayout>